--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "format_version": 2,
     "header": {
         "description": "§9Only one player will need to sleep to skip to day, and change the weather to clear §r| §1by TheAlienDoctor §r| §eDownload from TheAlienDoctor.com §r| §4Version: 1.0.0",
-        "name": "§1Alien's §eOne player sleep §4(V1.0.0)",
-        "uuid": "bfb96636-a689-422e-9d1b-5e4042ffd277",
+        "name": "§1Alien's §eOne player sleep §4(RP-V1.0.0)",
+        "uuid": "16f72ad4-f8b5-4937-b725-06ffee51d03e",
         "version": [
             1,
             0,
@@ -18,8 +18,8 @@
     "modules": [
         {
             "description": "§9Only one player will need to sleep to skip to day, and change the weather to clear §r| §1by TheAlienDoctor §r| §eDownload from TheAlienDoctor.com §r| §4Version: 1.0.0",
-            "type": "data",
-            "uuid": "12748bf8-c003-4fdd-b058-50aedbbedee2",
+            "type": "resources",
+            "uuid": "616fb0c6-5120-4c0a-ba4a-08270604ddfb",
             "version": [
                 1,
                 0,
