Added bp dependency

--- a/manifest.json
+++ b/manifest.json
@@ -26,5 +26,15 @@
                 0
             ]
         }
+    ],
+    "dependencies": [
+        {
+            "uuid": "bfb96636-a689-422e-9d1b-5e4042ffd277",
+            "version": [
+                1,
+                0,
+                0
+            ]
+        }
     ]
 }
